gtk+2.0 (2.14.7-5) UNRELEASED; urgency=low

  [ Emilio Pozuelo Monfort ]
  * Let libgtk2.0-0 suggest gvfs, as it's needed for some APIs like
    gtk_show_uri.

  [ Josselin Mouette ]
  * libgtk2.0-0 depends on shared-mime-info. Closes: #518090.
  * Add dependent doc packages to b-d-i to ensure proper xrefs.

 -- Emilio Pozuelo Monfort <pochu@ubuntu.com>  Wed, 04 Mar 2009 11:52:24 +0100

gtk+2.0 (2.14.7-4) unstable; urgency=low

  * 032_gdkwindowimpl_directfb.patch: re-generate the patch from the 
    corresponding SVN commits. One line went missing, causing a crash. 
    Thanks Jérémy Bobbio for reporting it.
  * Upload to unstable, let’s get rolling.

 -- Josselin Mouette <joss@debian.org>  Mon, 02 Mar 2009 13:33:17 +0100

gtk+2.0 (2.14.7-3) experimental; urgency=low

  * 032_gdkwindowimpl_directfb.patch: new version of the patch. This 
    should restore the basic functionality of the backend, but there is 
    still work underway.
  * 033_directfb_client-message.patch: stolen from the upstream SVN. Fix 
    the DirectFB client_message API.
  * 034_directfb_memleak.patch: stolen from the upstream SVN. Fix memory 
    leak in the DirectFB code.
  * Require DirectFB 1.0.0 for the 034 patch.
  * 070_mandatory-relibtoolize.patch: updated accordingly.

 -- Josselin Mouette <joss@debian.org>  Sat, 21 Feb 2009 14:59:45 +0100

gtk+2.0 (2.14.7-2) experimental; urgency=low

  * 008_implicit_pointer_conversion_gdkgc_directfb.patch: removed, it’s 
    obsolete and just defines the same macro a second time.
  * 007_implicit_pointer_conversion_gdkdrawable_directfb.patch: removed, 
    it’s not needed anymore with the latest directfb.
  * 006_proper-directfb-modules.patch: removed from the package, it 
    won’t be necessary anymore.
  * 001_static-linking-dont-query-immodules.patch,
    002_static-linking-dont-build-perf.patch,
    003_gdk.pc_privates.patch,
    004_gtk+-ximian-gtk2-filesel-navbutton-5.patch: refreshed.