@@ -99,7 +99,7 @@ sub find_modules {
         # prefix later on
         my $path = make_absolute_path($_);
         if (! -e $path) {
-            warning("skipping $path.");
+            verbose_print("skipping $path.");
             next;
         }
         if (-d $path) {
@@ -193,9 +193,10 @@ foreach my $package (@{$dh{DOPACKAGES}}) {
     find_modules(\@loaders_modules, $tmp, $loaders_modules_path);
     find_modules(\@im_modules, $tmp, $im_modules_path);
 
+    warning("Package $package has " + @loaders_modules + " GdkPixbuf loaders and " + @im_modules + " Gtk IM modules.");
+
     # if no modules of these types were found, we're done
     if (0 == @loaders_modules + @im_modules) {
-        warning("no GdkPixbuf loaders or Gtk IM modules found for package $package.");
         next;
     }
 
